Include paymentStatus query parameter for Purchase Orders
